Figure out how to stop elements from overlapping...simply add margins to each individual container. Not sure if this is best practice with HTML and CSS, unfortunately. Applied to the features and how-it-works section.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,10 @@ body
 {
     display: flex;
     justify-content: center;
+    position: relative;
+    border: red solid 3px;
+    margin-top: 150px;
+    margin-bottom: 150px;
 }
 
 /*Class Selectors (.)*/
@@ -98,18 +102,28 @@ body
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 40px 40px 40px;
-    grid-gap: 7px;
+    grid-gap: 1rem;
     padding-top: 15px;
 
 }
 .features-icon img
 {
-    background: red;
+    
     height: 100px;
+    border: red solid 2px;
 }
 .features-description 
 {
-    background: blue;
+    
+    height: 150px;
+    /*border: red solid 2px;
+    background: blue;*/
+    
+}
+
+.features-description.desc2
+{
+    margin-top: 100px;
 }
 /*.features-item3 img
 {
